# bank-ocr

./: .gitignore  Home.py  README.md  app.py  database.py  pyproject.toml
pages/: 1_Classifier.py  2_Manage_Categories.py
